<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_margin="10dp">

    <RelativeLayout
        android:layout_width="320dp"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:layout_marginTop="60dp"
            android:background="@drawable/deletepopupbackground" >

        </RelativeLayout>

        <ImageView
            android:id="@+id/profile_edit_image"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_centerHorizontal="true"
            android:contentDescription="@string/logo"
            android:scaleType="fitXY"
            app:srcCompat="@drawable/clear_data" />

        <Button
            android:id="@+id/account_delete_button"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="230dp"
            android:layout_marginEnd="94dp"
            android:background="@drawable/deletebutton"
            android:text="@string/clear1"
            android:textColor="@color/white"
            android:textStyle="bold" />

        <ImageView
            android:id="@+id/minimize2"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="45dp"
            android:layout_marginEnd="2dp"
            android:contentDescription="@string/logo"
            android:scaleType="fitCenter"
            app:srcCompat="@drawable/cancel" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/profile_edit_image"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="10dp"
            android:text="@string/information"
            android:textColor="@color/selected_picker"
            android:textSize="24sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textView6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/textView4"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="15dp"
            android:paddingStart="10dp"
            android:paddingEnd="1dp"
            android:text="@string/info"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:textStyle="bold"
            android:letterSpacing="0.2"/>

        <TextView
            android:id="@+id/textView7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/textView6"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="10dp"
            android:text="@string/info1"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:textStyle="bold" />

    </RelativeLayout>
</RelativeLayout>